syntax = "proto2";

package  Docapost.IA.Tesseract.Proto;

import "File.proto";

message Synchro_Master {	
	required int32 TotalThread = 1;
	required int32 done = 2;
	required int32 skip = 3;
	required int32 total = 4;
	required bool isEnd = 5;
	required int32 Pending = 6;

	
	repeated File Data = 7;
}